--- a/templates/template.html
+++ b/templates/template.html
@@ -17,7 +17,7 @@
 
             <div class="t_c">
                 <strong>Content</strong> <br>
-                <small>Irgendwas</small>
+                <small>{{current_result.datestamp}}</small>
             </div>
 
         </div>
