--- a/styles/website.css
+++ b/styles/website.css
@@ -1,1 +1,27 @@
 /* CSS for website */
+
+.page-toc:before {
+    content: "Table of Contents";
+    font-weight: bold;
+}
+
+.page-toc {
+	margin-top: 24px;
+    background: #F5F5F5;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    border-radius: 3px;
+    padding: 20px !important;
+	font-size: smaller;
+}
+
+.page-toc ul {
+    padding-left: 20px;
+}
+
+.page-toc > ul {
+	padding-left: 0;
+}
+
+.page-toc li {
+    list-style: none;
+}
