--- a/styles/website.css
+++ b/styles/website.css
@@ -6,6 +6,8 @@
 }
 
 .page-toc {
+    float: none !important;
+    mit-width: 66%;
 	margin-top: 24px;
     background: #F5F5F5;
     border: 1px solid rgba(0, 0, 0, 0.07);
