--- a/styles/website.css
+++ b/styles/website.css
@@ -3,13 +3,14 @@
 .page-toc:before {
     content: "Table of Contents";
     font-weight: bold;
+    margin-bottom: 24px;
 }
 
 .page-toc {
     float: none !important;
     mit-width: 66%;
 	margin-top: 24px;
-    background: #F5F5F5;
+    background: #FAFAFA !important;
     border: 1px solid rgba(0, 0, 0, 0.07);
     border-radius: 3px;
     padding: 20px !important;
