--- a/styles/website.css
+++ b/styles/website.css
@@ -16,6 +16,10 @@
     color: #3F51B5 !important;
 }
 
+.chapter .active > a {
+    color: #3F51B5 !important;
+}
+
 
 a:link {
     color: #3F51B5;
